force-app/main/default/objects/Account/fields/Acc_Active__c.field-meta.xml
<CustomField>
    <fullName>Acc_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acc Active</label>
    <type>Checkbox</type>
</CustomField>