force-app/main/default/objects/Account/fields/Account_Deploy_Test__c.field-meta.xml
<CustomField>
    <fullName>Account_Deploy_Test__c</fullName>
    <label>Account Deploy Test</label>
    <length>255</length>
    <type>Text</type>
</CustomField>