force-app/main/default/objects/Account/fields/Account_Owner_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Email_Id__c</fullName>
    <formula>Owner.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Account Owner Email Id</inlineHelpText>
    <label>Account Owner Email Id</label>
    <type>Text</type>
</CustomField>