force-app/main/default/objects/Account/fields/Client_Rating__c.field-meta.xml
<CustomField>
    <fullName>Client_Rating__c</fullName>
    <label>Client Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Platinum  AUM over Rs 1 cr</fullName>
            </value>
            <value>
                <fullName>Gold  Rs 50 lakhs to Rs 1 cr</fullName>
            </value>
            <value>
                <fullName>Silver Rs 25 lakhs to Rs 50 lakhs</fullName>
            </value>
            <value>
                <fullName>Bronze  below Rs 25 lakhs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>