force-app/main/default/objects/Account/fields/Count_of_Probable_close_date_changed__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Probable_close_date_changed__c</fullName>
    <label>Count of Probable close date changed</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>