force-app/main/default/objects/Account/fields/new_test_turbo__c.field-meta.xml
<CustomField>
    <fullName>new_test_turbo__c</fullName>
    <label>new test turbo</label>
    <type>DateTime</type>
</CustomField>