force-app/main/default/objects/Account/fields/Phenoxy_Probable_close_date__c.field-meta.xml
<CustomField>
    <fullName>Phenoxy_Probable_close_date__c</fullName>
    <label>Phenoxy Probable close date</label>
    <type>Date</type>
</CustomField>