force-app/main/default/objects/Account/fields/Test_Credit_Score_Percent__c.field-meta.xml
<CustomField>
    <fullName>Test_Credit_Score_Percent__c</fullName>
    <label>Test Credit Score Percent</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>