force-app/main/default/objects/Account/fields/test_Credit_Score_Test__c.field-meta.xml
<CustomField>
    <fullName>test_Credit_Score_Test__c</fullName>
    <formula>TODAY() -  LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>test Credit Score Test</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>