force-app/main/default/objects/Account/fields/Test_Date_1__c.field-meta.xml
<CustomField>
    <fullName>Test_Date_1__c</fullName>
    <label>Test Date 1 new 1</label>
    <type>Date</type>
</CustomField>