force-app/main/default/objects/Account/fields/Test_Date_time_2__c.field-meta.xml
<CustomField>
    <fullName>Test_Date_time_2__c</fullName>
    <defaultValue>DATETIMEVALUE(TEXT(DATEVALUE(NOW())) + &apos; 12:59:00&apos;)</defaultValue>
    <label>Test Date time 2</label>
    <type>DateTime</type>
</CustomField>