force-app/main/default/objects/Account/fields/test_Formula_date_1__c.field-meta.xml
<CustomField>
    <fullName>test_Formula_date_1__c</fullName>
    <formula>Test_Date_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>test Formula date 1</label>
    <type>Date</type>
</CustomField>