force-app/main/default/objects/Account/fields/test_Formula_date_time_2__c.field-meta.xml
<CustomField>
    <fullName>test_Formula_date_time_2__c</fullName>
    <formula>DATETIMEVALUE(TEXT(DATEVALUE(CreatedDate )) + &apos; 6:30:00&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>test Formula date time 2</label>
    <type>DateTime</type>
</CustomField>