force-app/main/default/objects/Account/fields/Test_New_Turbo_DT__c.field-meta.xml
<CustomField>
    <fullName>Test_New_Turbo_DT__c</fullName>
    <formula>DATETIMEVALUE(TEXT(DATEVALUE( CreatedDate )) + &apos; 17:30:00&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Turbo Date at 6 am</inlineHelpText>
    <label>Test New Turbo DT</label>
    <type>DateTime</type>
</CustomField>