force-app/main/default/objects/Account/fields/Test_Turbo_Follow_up_date__c.field-meta.xml
<CustomField>
    <fullName>Test_Turbo_Follow_up_date__c</fullName>
    <formula>TIMEVALUE(&quot;00:00:00.000&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Turbo Follow up date</label>
    <type>Time</type>
</CustomField>