force-app/main/default/objects/Account/fields/users_task__c.field-meta.xml
<CustomField>
    <fullName>users_task__c</fullName>
    <label>users task</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>