force-app/main/default/objects/Account/recordTypes/ECommNil_Account.recordType-meta.xml
<RecordType>
    <fullName>ECommNil_Account</fullName>
    <active>true</active>
    <description>@Np : 10-11-24 : Internsmeet ECommNil Account</description>
    <label>ECommNil Account</label>
</RecordType>