force-app/main/default/objects/Account/recordTypes/Geo_Location.recordType-meta.xml
<RecordType>
    <fullName>Geo_Location</fullName>
    <active>true</active>
    <label>Geo Location</label>
</RecordType>