force-app/main/default/objects/Account/recordTypes/Job_App_Recruiter.recordType-meta.xml
<RecordType>
    <fullName>Job_App_Recruiter</fullName>
    <active>true</active>
    <label>Job-App Recruiter</label>
</RecordType>