force-app/main/default/objects/Account/recordTypes/Lets_co_space_business_Ac.recordType-meta.xml
<RecordType>
    <fullName>Lets_co_space_business_Ac</fullName>
    <active>true</active>
    <label>Let&apos;s co space business Ac</label>
</RecordType>