force-app/main/default/objects/Account/recordTypes/Sales_Inventory_Account_App.recordType-meta.xml
<RecordType>
    <fullName>Sales_Inventory_Account_App</fullName>
    <active>true</active>
    <label>Sales Inventory Account App</label>
</RecordType>