force-app/main/default/objects/Account/listViews/Copy_of_My_Accounts.listView-meta.xml
<ListView>
    <fullName>Copy_of_My_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Active__c</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>Industry__pc</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.ADDRESS1_CITY</field>
        <operation>equals</operation>
        <value>Nagpur</value>
    </filters>
    <filters>
        <field>ACCOUNT.INDUSTRY</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Accounts</label>
</ListView>